--- a/src/UI-Kit/Navbar/Navbar.module.scss
+++ b/src/UI-Kit/Navbar/Navbar.module.scss
@@ -17,6 +17,37 @@
   }
 }
 
+.ThemeToggle {
+  background: none;
+  padding: 0;
+  border: none;
+  margin-left: 2rem;
+
+  &:focus,
+  &:hover {
+    outline: none;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  .ThemeToggleIcon {
+    position: relative;
+    top: 2px;
+    display: block;
+    width: 1.25rem;
+  }
+  @include mobile-only {
+    margin-left: 1rem;
+
+    .ThemeToggleIcon {
+      top: 4px;
+      width: 1.5rem;
+    }
+  }
+}
+
 .TopElementsWrapper {
   display: flex;
   width: 100%;
@@ -108,6 +139,15 @@
     background: color(light, body-bg);
   }
 
+  .ThemeToggle {
+    &:focus,
+    &:hover {
+      svg path {
+        fill: color(light, primary);
+      }
+    }
+  }
+
   .Brand:hover {
     background: darken(color(light, primary), 10%);
   }
@@ -124,6 +164,15 @@
 .Navbar-Dark {
   &.Open {
     background: color(dark, body-bg);
+  }
+
+  .ThemeToggle {
+    &:focus,
+    &:hover {
+      svg path {
+        fill: color(dark, primary);
+      }
+    }
   }
 
   .Brand:hover {
