--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,9 +8,17 @@
       light: #ec4242,
       dark: #fa5a5a,
     ),
+    primary-focus: (
+      light: #db1616,
+      dark: #f81f1f,
+    ),
     primary-text: (
       light: #dd0404,
       dark: #f95b5b,
+    ),
+    primary-text-focus: (
+      light: #a10303,
+      dark: #f72020,
     ),
     text: (
       light: #444,
