--- a/src/UI-Kit/Link/Link.module.scss
+++ b/src/UI-Kit/Link/Link.module.scss
@@ -43,7 +43,7 @@
   }
 
   &:hover svg path {
-    fill: darken(color(light, primary-text), 15%);
+    fill: color(light, primary-text-focus);
   }
 }
 
@@ -53,6 +53,6 @@
   }
 
   &:hover svg path {
-    fill: darken(color(dark, primary-text), 15%);
+    fill: color(dark, primary-text-focus);
   }
 }
