moved post stuff to mixin

--- a/src/templates/post/blog/components/PostBody/PostBody.scss
+++ b/src/templates/post/blog/components/PostBody/PostBody.scss
@@ -98,96 +98,54 @@
   }
 }
 
-.post-body.Light {
-  a {
-    color: color(light, primary-text);
+@mixin PostBody($theme) {
+  .post-body.#{$theme} {
+    a {
+      color: color($theme, primary-text);
 
-    &:hover {
-      border-color: color(light, primary-text);
+      &:hover {
+        border-color: color($theme, primary-text);
+      }
     }
-  }
 
-  color: color(light, text);
+    color: color($theme, text);
 
-  h1 {
-    @extend .Header;
-    @extend .Headline;
-    color: color(light, text-bold);
-  }
+    h1 {
+      @extend .Header;
+      @extend .Headline;
+      color: color($theme, text-bold);
+    }
 
-  h2 {
-    @extend .Header;
-    @extend .Title;
-    color: color(light, text-bold);
-  }
+    h2 {
+      @extend .Header;
+      @extend .Title;
+      color: color($theme, text-bold);
+    }
 
-  h3 {
-    @extend .Header;
-    @extend .Subtitle;
-    color: color(light, text-bold);
-  }
+    h3 {
+      @extend .Header;
+      @extend .Subtitle;
+      color: color($theme, text-bold);
+    }
 
-  img {
-    background-color: color(light, caption-bg);
-  }
+    img {
+      background-color: color($theme, caption-bg);
+    }
 
-  blockquote {
-    @include left-border(color(light, primary));
-    color: color(light, text-muted);
-  }
+    blockquote {
+      @include left-border(color($theme, primary));
+      color: color($theme, text-muted);
+    }
 
-  .scrollable {
-    @include mobile-only {
-      &:after {
-        color: color(light, text-muted);
+    .scrollable {
+      @include mobile-only {
+        &:after {
+          color: color($theme, text-muted);
+        }
       }
     }
   }
 }
 
-.post-body.Dark {
-  a {
-    color: color(dark, primary-text);
-
-    &:hover {
-      border-color: color(dark, primary-text);
-    }
-  }
-
-  color: color(dark, text);
-
-  h1 {
-    @extend .Header;
-    @extend .Headline;
-    color: color(dark, text-bold);
-  }
-
-  h2 {
-    @extend .Header;
-    @extend .Title;
-    color: color(dark, text-bold);
-  }
-
-  h3 {
-    @extend .Header;
-    @extend .Subtitle;
-    color: color(dark, text-bold);
-  }
-
-  img {
-    background-color: color(dark, caption-bg);
-  }
-
-  blockquote {
-    @include left-border(color(dark, primary));
-    color: color(dark, text-muted);
-  }
-
-  .scrollable {
-    @include mobile-only {
-      &:after {
-        color: color(dark, text-muted);
-      }
-    }
-  }
-}
+@include PostBody(Light);
+@include PostBody(Dark);
