--- a/src/templates/post/blog/components/PostFooter/PostFooter.module.scss
+++ b/src/templates/post/blog/components/PostFooter/PostFooter.module.scss
@@ -73,10 +73,11 @@
   }
 }
 
-.PostFooter-Light .Navigation {
-  color: color(light, text-muted);
+@mixin PostFooter($theme) {
+  .PostFooter-#{$theme} .Navigation {
+    color: color($theme, text-muted);
+  }
 }
 
-.PostFooter-Dark .Navigation {
-  color: color(dark, text-muted);
-}
+@include PostFooter(Light);
+@include PostFooter(Dark);
