--- a/src/templates/project/projectTemplate.module.scss
+++ b/src/templates/project/projectTemplate.module.scss
@@ -53,38 +53,25 @@ $grid-gutter-size: 1rem;
   }
 }
 
-.ProjectTemplate-Light {
-  img {
-    border-color: color(light, img-border);
-  }
-
-  a {
-    color: color(light, primary-text);
-
-    &:hover {
-      border-color: color(light, primary-text);
+@mixin ProjectTemplate($theme) {
+  .ProjectTemplate-#{$theme} {
+    img {
+      border-color: color($theme, img-border);
     }
-  }
 
-  .Description {
-    @include left-border(color(light, primary));
+    a {
+      color: color($theme, primary-text);
+
+      &:hover {
+        border-color: color($theme, primary-text);
+      }
+    }
+
+    .Description {
+      @include left-border(color($theme, primary));
+    }
   }
 }
 
-.ProjectTemplate-Dark {
-  img {
-    border-color: color(dark, img-border);
-  }
-
-  a {
-    color: color(dark, primary-text);
-
-    &:hover {
-      border-color: color(dark, primary-text);
-    }
-  }
-
-  .Description {
-    @include left-border(color(dark, primary));
-  }
-}
+@include ProjectTemplate(Light);
+@include ProjectTemplate(Dark);
