--- a/src/UI-Kit/Button/Button.module.scss
+++ b/src/UI-Kit/Button/Button.module.scss
@@ -3,7 +3,6 @@
 .Button {
   display: inline-block;
   padding: 1rem 1.5rem;
-  background: $brand-primary;
 
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -16,18 +15,15 @@
   transition: all 0.2s linear;
 }
 
-.Button-Light {
-  background: color(light, primary);
+@mixin Button($theme) {
+  .Button-#{$theme} {
+    background: color($theme, primary);
 
-  &:hover {
-    background: color(light, primary-focus);
+    &:hover {
+      background: color($theme, primary-focus);
+    }
   }
 }
 
-.Button-Dark {
-  background: color(dark, primary);
-
-  &:hover {
-    background: color(dark, primary-focus);
-  }
-}
+@include Button(Light);
+@include Button(Dark);
