--- a/src/UI-Kit/Footer/Footer.module.scss
+++ b/src/UI-Kit/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 @import 'foundation';
 
 .Footer {
-  border-top: 1px solid #ddd;
+  border-top: 1px solid;
 }
 
 .FooterLinks {
@@ -36,3 +36,12 @@
     margin: 0;
   }
 }
+
+@mixin Footer($theme) {
+  .Footer-#{$theme} {
+    border-color: color($theme, accent-line);
+  }
+}
+
+@include Footer(Light);
+@include Footer(Dark);
